        its github id.
    - developers may want to create test builds for themselves. run dev/generate_test_build.py for it.
        When doing so, DO NOT INCLUDE version.json from root, as it will update the build ID of it
    - develop a PyCharm plugin for FactoryBuilder type hints, and mod dev stuff


changelog of snapshot <21w06a> released on <...> targeting <21w03a>
    Commands:
        - added /worldgendebug command

    World Generation:
        - added async world generation process
        - added access system from other processes to the current world


changelog of snapshot 21w04a released on 27.01.2021, targeting 21w03a
    This snapshot broke backwards compatibility, again...
    Namely (the most note-able):
    - item factories
    - crafting recipes
    - behaviour changes of BlockFaceState, for better performance
    - command system
    - inventory system (pushed in direction of container separation)

    Commands:
        - added /blockinfo command giving information about the block currently looking at
        - added /recipeview command for below recipe view
        - /execute has now a registry-like structure for sub-nodes
        - /execute in takes now a dimension name instead of its ID
        - defined /execute var [currently not use-able]

    Rendering:
        - improved block rendering

    Server:
        - improved server separation from client

    Crafting:
        - added a screen system for displaying recipes, with extension point for mods, with plans for features
            like in JEI
        - rewritten base recipe API

    Documentation:
        - fixed documentation generation
        - updated & improved docs

    API:
        - ItemFactory is now also created by FactoryBuilder
        - this is breaking existing code, again...
        - added a new combined factory system using in-memory calculations

    Build System:
        - improved undocumented build