@@ -72,7 +72,11 @@ class World(mcpython.common.world.AbstractInterface.IWorld):
         self.active_player: str = "unknown"  # todo: make property, make None-able & set default None when not in world
         self.world_loaded = False  # describes if the world is loaded or not
 
-        self.world_generation_process = mcpython.common.world.RemoteWorldAccess.RemoteWorldHelper.spawn_process(self)
+        self.world_generation_process = (
+            mcpython.common.world.RemoteWorldAccess.RemoteWorldHelper.spawn_process(
+                self
+            )
+        )
 
     def tick(self):
         for dimension in self.dimensions.values():
